Actual demo ready commit

--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,4 @@ RewriteRule ^admin$ adminvote.php [L]
 RewriteRule ^adminvote$ adminvote.php [L]
 RewriteRule ^results$ viewresults.php [L]
 RewriteRule ^viewresults$ viewresults.php [L]
+RewriteRule ^datadump$ datadump.php [L]
